# nanobot-mg

./: .gitignore  .ping_out.txt  AGENTS.md  CODE_REVIEW_SUMMARY.md  Dockerfile  README.md  README_en.md  SECURITY.md  _debug_router.py  check_all_tools.py  check_tools.py  cmsg.txt  commit_context.bat  commit_context.py  diagnose_agents.py  docker-compose.yml  find_empty_desc.py  project_card.md  pyproject.toml  restart_gateway.py  setup.bat  setup.py  setup.sh  tmp_commit_msg.txt  tmp_debug.py  tmp_git.py
.github/workflows/: ci.yml
docs/: AGENTS.md  MEMORY.md  README.md  agent-social-network.md  channel-plugin-guide.md  chat-apps.md  chat-commands.md  cli-reference.md  configuration.md  cron.md  deployment.md  mcp.md  memory.md  multiple-instances.md  my-tool.md  openai-api.md  project_card.md  prompt-templates.md  python-sdk.md  quick-start.md  security.md  skills-guide.md  tools-reference.md  transcription.md  troubleshooting.md  websocket.md  webui.md
docs/ideas/: session-reset-after-task.md
examples/: curl.txt
hooks/: write_commit.py
memory/.skills_index/: chunks.json  file_map.json  index.faiss
nanobot/: CODE_REVIEW_SUMMARY.md  CODE_REVIEW_loop.md  CODE_REVIEW_tools.md  __init__.py  nanobot.py  project_card.md
nanobot/agent/: __init__.py  assess_me.py  autocompact.py  compress.py  compressor.py  context.py  context_vars.py  db.py  hook.py  llm_context.py  loop.py  loop_checkpoint.py  loop_constants.py  loop_dispatch.py  loop_hook.py  loop_mcp.py  loop_message_handlers.py  loop_utils.py  memory.py  memory_consolidator.py  memory_dream.py  memory_extractor.py  memory_store.py  memory_vector.py  message_pipe.py  project_scanner.py  runner.py  runner_constants.py  runner_context.py  runner_execution.py  runner_injection.py  runner_llm.py  runner_retry.py  skills.py  subagent.py  subagent_prompt.py  subagent_status.py  subagent_tools.py  task_executor.py  verify_functions.py
nanobot/api/: server.py  settings.html
nanobot/bus/: events.py  manager.py
nanobot/channels/: base.py  dingtalk.py  discord.py  feishu.py  manager.py  matrix.py  qq.py  slack.py  telegram.py  weixin.py  whatsapp.py
nanobot/cli/: commands.py  onboard.py  onboard_wizard.py
nanobot/command/: builtin.py  router.py
nanobot/config/: __init__.py  loader.py  paths.py  schema.py
nanobot/cron/: service.py  types.py
nanobot/docs/: tool-auto-verify.md
nanobot/gateway/: app.py
nanobot/heartbeat/: service.py  state.py
nanobot/hooks/: _utils.py  context_inject_hook.py  context_monitor.py  executor.py  self_cleanup_hook.py  self_detect_hook.py  self_evolution.py  self_fix_hook.py  self_insight_hook.py  self_log_hook.py  self_reflect.py  self_review.py
nanobot/onboard/: __init__.py  dingtalk.py  feishu.py
nanobot/providers/: _tool_call_parser.py  anthropic_provider.py  azure_openai_provider.py  base.py  factory.py  github_copilot_provider.py  litellm_provider.py  openai_codex_provider.py  openai_compat_provider.py  registry.py  transcription.py
nanobot/proxy/: hub.py  manager.py  protocol.py
nanobot/scripts/: migrate_to_sqlite.py
nanobot/security/: network.py
nanobot/session/: __init__.py  lifecycle.py  manager.py  orchestrator.py
nanobot/skills/: README.md
nanobot/templates/: AGENTS.md  HEARTBEAT.md  SOUL.md  TOOLS.md  USER.md
nanobot/tools/: self_restart.py
nanobot/utils/: compat.py  document.py  evaluator.py  gitstore.py  helpers.py  logging.py  media_decode.py  progress_events.py  prompt_templates.py  restart.py  runtime.py  searchusage.py  tool_hints.py  tools_index.py
nanobot/web/: README.md  index.html
scripts/: install-agent-deps.bat  install-agent-deps.sh
skills/_test_commit/: SKILL.md
skills/cross-project-porting/: SKILL.md
tasks/: REVIEW.md  TREE.md  code-review-patches.md  codebase-scan-report.md  explicit_communication_model.md  interruption-handling.md  lessons.md  memory-v2-design.md  message_pipe_design.md  platform-audit.md  soul-prompt-design.md  todo.md
tests/: test_build_status.py  test_commands.py  test_consolidate_offset.py  test_context_documents.py  test_cron_tool_list.py  test_document_parsing.py  test_feishu_reply.py  test_heartbeat_service.py  test_memory_consolidation_types.py  test_nanobot_facade.py  test_openai_api.py  test_restart_command.py  test_session_manager_history.py  test_telegram_channel.py  test_tool_contextvars.py
tests/agent/: conftest.py  test_ask_user.py  test_assess_me.py  test_auto_compact.py  test_compress.py  test_compressor.py  test_consolidation_ratio.py  test_consolidator.py  test_context.py  test_context_caching.py  test_context_memory.py  test_context_prompt_cache.py  test_context_task_tree.py  test_db.py  test_dream.py  test_extract_json.py  test_gemini_thought_signature.py  test_heartbeat_service.py  test_hook_composite.py  test_llm_context.py  test_loop_context_compression.py  test_loop_cron_timezone.py  test_loop_hooks.py  test_loop_lifecycle.py  test_loop_persist.py  test_loop_progress.py  test_loop_public_api.py  test_loop_record_turn.py  test_loop_sanitize.py  test_loop_save_turn.py  test_loop_tool_context.py  test_loop_utils.py  test_memory_extractor.py  test_memory_store.py  test_memory_vector.py  test_message_pipe.py  test_network.py  test_onboard_logic.py  test_overflow_persistence.py  test_project_scanner.py  (+20 more)
tests/api/: test_server.py
tests/bus/: test_bus_queue.py  test_channel_manager.py
tests/channels/: test_discord_channel.py  test_feishu_reply.py  test_telegram_channel.py  test_weixin_channel.py
tests/cli/: test_cli_input.py  test_commands.py  test_restart_command.py
tests/command/: test_router_dispatchable.py
tests/config/: test_config_migration.py  test_config_paths.py  test_config_provider_match.py
tests/cron/: test_cron_supplement.py  test_cron_tool_list.py  test_cron_tool_schema_contract.py
tests/gateway/: test_app.py  test_app_delivery.py  test_app_monitor.py
tests/heartbeat/: test_heartbeat_context_bridge.py  test_heartbeat_state.py  test_heartbeat_tick.py
tests/hooks/: test_context_monitor.py  test_self_detect_hook.py  (+6 more)
tmp/: test_business.py
webui/: index.html
(+352 files in other folders)
